--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk size" min="0" step="1" required>
         </div>
         <div class="mb-3">
+          <label for="sun-exposure" class="form-label">Sun Exposure <span style="color: red;">*</span></label>
+          <select id="sun-exposure" class="form-select" required></select>
+        </div>
+        <div class="mb-3">
           <span style="color: red;">*</span> These fields are required.
         </div>
 
