--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
   <body>
     <div class="container p-5">
@@ -17,6 +18,11 @@
           <label class="form-label">Current Location</label>
           <button type="button" class="btn btn-secondary" id="get-location">Get Location</button>
           <p id="location-info">Location not fetched yet.</p>
+        </div>
+
+        <div class="mb-3">
+          <label for="map" class="form-label">Select Location on Map</label>
+          <div id="map" style="height: 400px;"></div>
         </div>
 
         <div class="mb-3">
@@ -50,6 +56,7 @@
 
     <div id="result"></div>
     <div id="debug"></div>
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
+    <script defer src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   </body>
 </html>
