--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="trunk-size" class="form-label">Trunk Size (in cm) <span style="color: red;">*</span></label>
+          <label for="trunk-size" class="form-label">Trunk Diameter (in cm) <span style="color: red;">*</span></label>
           <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk size" min="0" step="1" required>
         </div>
         <div class="mb-3">
