add koala radius

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <div id="map" style="height: 400px;"></div>
         </div>
 
+        <input type="hidden" id="manual-lat" class="form-control">
+        <input type="hidden" id="manual-lon" class="form-control">
+
         <div class="mb-3">
           <label for="species" class="form-label">Tree Species <span style="color: red;">*</span></label>
           <select id="species" class="form-select" required></select>
