--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <input type="hidden" id="manual-lon" class="form-control">
 
         <div class="mb-3">
+          <label for="regions" class="form-label">Region <span style="color: red;">*</span></label>
+          <select id="regions" class="form-select" required></select>
+        </div>
+
+        <div class="mb-3">
           <label for="species" class="form-label">Tree Species <span style="color: red;">*</span></label>
           <select id="species" class="form-select" required></select>
         </div>
@@ -41,7 +46,7 @@
 
         <div class="mb-3">
           <label for="trunk-size" class="form-label">Trunk Diameter (in cm) <span style="color: red;">*</span></label>
-          <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk size" min="0" step="1" required>
+          <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk diameter" min="0" step="1" required>
         </div>
         <div class="mb-3">
           <label for="sun-exposure" class="form-label">Sun Exposure <span style="color: red;">*</span></label>
@@ -54,7 +59,22 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-      <div id="result"></div>
+      <!-- Modal structure -->
+      <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="resultModalLabel">Tree Value Estimate</h5>
+            </div>
+            <div class="modal-body" id="resultModalBody">
+              <!-- Results will be displayed here -->
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
 
