--- a/index.html
+++ b/index.html
@@ -10,54 +10,61 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container p-5">
-      <form id="tree-form">
-        <div class="mb-3">
-          <label for="map" class="form-label">
-            Select Location on Map or <a href="" id="get-location">get current Location</a>
-          </label>
-          <div id="map" style="height: 400px;"></div>
-        </div>
+      <form class="row" id="tree-form">
+        <div class="col-4">
+          <div class="mb-3">
+            <label for="regions" class="form-label">Region <span style="color: red;">*</span></label>
+            <select id="regions" class="form-select" required></select>
+          </div>
 
-        <div class="mb-3">
-          <label class="form-label">Current Location</label>
-          <p id="location-info">Location not fetched yet.</p>
-        </div>
+          <div class="mb-3">
+            <label for="species" class="form-label">Tree Species <span style="color: red;">*</span></label>
+            <select id="species" class="form-select" required></select>
+          </div>
 
-        <input type="hidden" id="manual-lat" class="form-control">
-        <input type="hidden" id="manual-lon" class="form-control">
+          <div class="mb-3">
+            <label for="condition" class="form-label">Tree Condition <span style="color: red;">*</span></label>
+            <select id="condition" class="form-select" required></select>
+          </div>
 
-        <div class="mb-3">
-          <label for="regions" class="form-label">Region <span style="color: red;">*</span></label>
-          <select id="regions" class="form-select" required></select>
-        </div>
+          <div class="mb-3">
+            <label for="trunk-size" class="form-label">Trunk Diameter (in cm) <span style="color: red;">*</span></label>
+            <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk diameter" min="0" step="1" required>
+          </div>
+          <div class="mb-3">
+            <label for="sun-exposure" class="form-label">Sun Exposure <span style="color: red;">*</span></label>
+            <select id="sun-exposure" class="form-select" required></select>
+          </div>
+          <div class="mb-3">
+            <span style="color: red;">*</span> These fields are required.
+          </div>
 
-        <div class="mb-3">
-          <label for="species" class="form-label">Tree Species <span style="color: red;">*</span></label>
-          <select id="species" class="form-select" required></select>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+        <div class="col-8">
+          <div class="mb-3">
+            <label for="map" class="form-label">
+              Select Location on Map or <a href="" id="get-location">get current Location</a>
+            </label>
+            <div class="rounded" id="map" style="height: 400px;"></div>
+          </div>
 
-        <div class="mb-3">
-          <label for="condition" class="form-label">Tree Condition <span style="color: red;">*</span></label>
-          <select id="condition" class="form-select" required></select>
-        </div>
+          <div class="mb-3">
+            <label class="form-label">Current Location</label>
+            <p id="location-info">Location not fetched yet.</p>
+          </div>
 
-        <div class="mb-3">
-          <label for="trunk-size" class="form-label">Trunk Diameter (in cm) <span style="color: red;">*</span></label>
-          <input type="number" id="trunk-size" class="form-control" placeholder="Enter trunk diameter" min="0" step="1" required>
+          <input type="hidden" id="manual-lat" class="form-control">
+          <input type="hidden" id="manual-lon" class="form-control">
         </div>
-        <div class="mb-3">
-          <label for="sun-exposure" class="form-label">Sun Exposure <span style="color: red;">*</span></label>
-          <select id="sun-exposure" class="form-select" required></select>
-        </div>
-        <div class="mb-3">
-          <span style="color: red;">*</span> These fields are required.
-        </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+    </div>
 
       <!-- Modal structure -->
       <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="resultModalLabel" aria-hidden="true">
@@ -75,11 +82,6 @@
           </div>
         </div>
       </div>
-
-    </div>
-
-    <div id="result"></div>
-    <div id="debug"></div>
     <script defer src="index.js"></script>
     <script defer src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   </body>
